--- a/src/main/resources/templates/admin/console.html
+++ b/src/main/resources/templates/admin/console.html
@@ -63,7 +63,7 @@
           </li>
           <li class="layui-nav-item" lay-unselect>
             <a href="javascript:;"><img src="//t.cn/RCzsdCq" class="layui-nav-img">
-              <cite th:text="${session.user.username}"></cite>
+              <cite >th:text="${session.user.username}"</cite>
             </a>
             <dl class="layui-nav-child">
               <dd><a lay-href="set/user/info.html">基本资料</a></dd>
@@ -109,7 +109,7 @@
               <dl class="layui-nav-child">
                 <dd><a lay-href="template/personalpage.html">个人主页</a></dd>
                 <dd><a lay-href="template/addresslist.html">人员列表</a></dd>
-                <dd><a lay-href="/admin/makeword">任务计划</a></dd>
+                <dd><a lay-href="/admin/makework">任务计划</a></dd>
                 <dd><a lay-href="template/goodslist.html">商品列表</a></dd>
                 <dd><a lay-href="template/msgboard.html">留言板</a></dd>
                 <dd><a lay-href="template/search.html">搜索结果</a></dd>
