--- a/src/main/resources/templates/admin/work/makework.html
+++ b/src/main/resources/templates/admin/work/makework.html
@@ -26,8 +26,7 @@
             <div class="layui-card">
                 <div class="layui-card-header">已有任务</div>
                 <div class="layui-card-body">
-                    这里将描写已经存在的任务列表<br>
-                    然后一个一个打印出来
+                    <table class="layui-hide" id="test1"></table>
                 </div>
             </div>
         </div>
@@ -35,68 +34,66 @@
             <div class="layui-card">
                 <div class="layui-card-header">待发布任务</div>
                 <div class="layui-card-body">
-                    结合 layui 的栅格系统<br>
-                    轻松实现响应式布局
+                    <table class="layui-hide" id="test2"></table>
                 </div>
             </div>
         </div>
-        <div class="layui-col-md12">
+        <div class="layui-col-md6">
             <div class="layui-card">
                 <div class="layui-card-header">制定任务</div>
                 <div class="layui-card-body">
                     <form class="layui-form" action="" lay-filter="example">
                         <div class="layui-form-item">
-                            <label class="layui-form-label">输入框</label>
-                            <div class="layui-input-block">
-                                <input type="text" name="username" lay-verify="title" autocomplete="off" placeholder="请输入标题" class="layui-input">
+                            <label class="layui-form-label">任务名称</label>
+                            <div class="layui-input-block" width="80%">
+                                <input type="text" name="name" id="name_text" lay-verify="title" autocomplete="off" placeholder="任务名称" class="layui-input">
                             </div>
                         </div>
                         <div class="layui-form-item">
-                            <label class="layui-form-label">密码框</label>
-                            <div class="layui-input-block">
-                                <input type="password" name="password" placeholder="请输入密码" autocomplete="off" class="layui-input">
+                            <label class="layui-form-label">点此赋值</label>
+                            <div class="layui-form-mid layui-word-aux">
+                                <button type="button" class="layui-btn layui-btn-primary" id="LAY-component-form-setval">创客实验室2020年夏季每周学习总结提交</button>
                             </div>
                         </div>
+<!--                        <div class="layui-form-item">-->
+<!--                            <label class="layui-form-label">密码框</label>-->
+<!--                            <div class="layui-input-block">-->
+<!--                                <input type="password" name="password" placeholder="请输入密码" autocomplete="off" class="layui-input">-->
+<!--                            </div>-->
+<!--                        </div>-->
 
                         <div class="layui-form-item">
-                            <label class="layui-form-label">选择框</label>
-                            <div class="layui-input-block">
+                            <label class="layui-form-label">任务类型</label>
+                            <div class="layui-input-inline">
                                 <select name="interest" lay-filter="aihao">
                                     <option value=""></option>
-                                    <option value="0">写作</option>
-                                    <option value="1">阅读</option>
-                                    <option value="2">游戏</option>
-                                    <option value="3">音乐</option>
-                                    <option value="4">旅行</option>
+                                    <option value="0">学习总结</option>
+                                    <option value="1">任务进度报告</option>
+                                    <option value="2">比赛总结</option>
+                                    <option value="3">比赛进度</option>
+                                    <option value="4">个人感想</option>
                                 </select>
                             </div>
+                            <div class="layui-form-mid layui-word-aux">管理员可以自主制定任务类型</div>
                         </div>
 
                         <div class="layui-form-item">
-                            <label class="layui-form-label">复选框</label>
+                            <label class="layui-form-label">是否选择人员可见</label>
+                            <div class="layui-input-inline">
+                                <input type="checkbox" name="close" lay-skin="switch"  lay-filter="switchTest"  lay-text="ON|OFF">
+                            </div>
+                            <div class="layui-form-mid layui-word-aux">若不选择，则默认全体可见</div>
+                        </div>
+
+                        <div class="whoCanSeeIt layui-form-item">
+                            <label class="layui-form-label">指定人员可见</label>
                             <div class="layui-input-block">
-                                <input type="checkbox" name="like[write]" title="写作">
-                                <input type="checkbox" name="like[read]" title="阅读">
-                                <input type="checkbox" name="like[daze]" title="发呆">
+                                <input type="checkbox" th:each="userinfo : ${userList}" th:name="${userinfo.id}" th:title="${userinfo.username}">
                             </div>
                         </div>
 
-                        <div class="layui-form-item">
-                            <label class="layui-form-label">开关</label>
-                            <div class="layui-input-block">
-                                <input type="checkbox" name="close" lay-skin="switch" lay-text="ON|OFF">
-                            </div>
-                        </div>
-
-                        <div class="layui-form-item">
-                            <label class="layui-form-label">单选框</label>
-                            <div class="layui-input-block">
-                                <input type="radio" name="sex" value="男" title="男" checked="">
-                                <input type="radio" name="sex" value="女" title="女">
-                            </div>
-                        </div>
                         <div class="layui-form-item layui-form-text">
-                            <label class="layui-form-label">文本域</label>
+                            <label class="layui-form-label">填写任务描述</label>
                             <div class="layui-input-block">
                                 <textarea placeholder="请输入内容" class="layui-textarea" name="desc"></textarea>
                             </div>
@@ -104,18 +101,27 @@
 
                         <div class="layui-form-item">
                             <div class="layui-input-block">
-                                <button type="button" class="layui-btn layui-btn-normal" id="LAY-component-form-setval">赋值</button>
-                                <button type="button" class="layui-btn layui-btn-normal" id="LAY-component-form-getval">取值</button>
-                                <button type="submit" class="layui-btn" lay-submit="" lay-filter="demo1">立即提交</button>
+                                <button type="button" class="layui-btn layui-btn-normal"  lay-filter="formDemo" id="LAY-component-form-getval">查看任务报表</button>
+                                <button type="submit" class="layui-btn" lay-submit="" lay-filter="submit_btn">完成编辑</button>
                             </div>
                         </div>
                     </form>
                 </div>
             </div>
         </div>
+        <div class="layui-col-md6">
+            <div class="layui-card">
+                <div class="layui-card-header">卡片面板</div>
+                <div class="layui-card-body">
+                    卡片式面板面板通常用于非白色背景色的主体内<br>
+                    从而映衬出边框投影
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
+<script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
 <script th:src="@{'/layuiadmin/layui/layui.js'}"></script>
 <script>
     layui.use(['form', 'layedit', 'laydate'], function() {
@@ -124,6 +130,95 @@
             , layedit = layui.layedit
             , laydate = layui.laydate;
 
+
+        $(".whoCanSeeIt").hide();
+
+        // 表单赋值
+        layui.$('#LAY-component-form-setval').on('click', function(){
+            form.val('example', {
+                "name": "创客实验室2020年夏季每周学习总结提交" // "name": "value"
+
+            });
+        });
+
+        //监听指定开关
+        form.on('switch(switchTest)', function(data){
+            if(data.elem.checked) {
+                // console.log("开启 ->");
+                layer.tips('温馨提示：请在下方选择谁可见', data.othis)
+                $(".whoCanSeeIt").show();
+            }else{
+                // console.log("关闭 ->");
+                $(".whoCanSeeIt").hide();
+            }
+            // layer.msg('开关checked：'+ (this.checked ? 'true' : 'false'), {
+            //     offset: '6px'
+            // });
+            // layer.open({
+            //     type: 1,
+            //     content: '传入任意的文本或html' //这里content是一个普通的String
+            // });
+
+        });
+
+        // 表单查看
+        form.on('submit(formDemo)', function(data){
+            layer.msg(JSON.stringify(data.field));
+            return false;
+        });
+        //监听提交
+        form.on('submit(submit_btn)', function (data) {
+            
+        })
+
+        // 已有任务表格
+        layui.use('table', function(){
+            var table = layui.table;
+
+            table.render({
+                elem: '#test1'
+                ,url:'/demo/table/user/'
+                ,cellMinWidth: 80 //全局定义常规单元格的最小宽度，layui 2.2.1 新增
+                ,cols: [
+                    [
+                    {field:'id', width:80, title: 'ID', sort: true}
+                    ,{field:'username', width:80, title: '用户名'}
+                    ,{field:'sex', width:80, title: '性别', sort: true}
+                    ,{field:'city', width:80, title: '城市'}
+                    ,{field:'sign', title: '签名', width: '30%', minWidth: 100} //minWidth：局部定义当前单元格的最小宽度，layui 2.2.1 新增
+                    ,{field:'experience', title: '积分', sort: true}
+                    ,{field:'score', title: '评分', sort: true}
+                    ,{field:'classify', title: '职业'}
+                    ,{field:'wealth', width:137, title: '财富', sort: true}
+                ]
+                ]
+            });
+        });
+
+
+        // 待发布任务表格
+        layui.use('table', function(){
+            var table = layui.table;
+
+            table.render({
+                elem: '#test2'
+                ,url:'/demo/table/user/'
+                ,cellMinWidth: 80 //全局定义常规单元格的最小宽度，layui 2.2.1 新增
+                ,cols: [
+                    [
+                        {field:'id', width:80, title: 'ID', sort: true}
+                        ,{field:'username', width:80, title: '用户名'}
+                        ,{field:'sex', width:80, title: '性别', sort: true}
+                        ,{field:'city', width:80, title: '城市'}
+                        ,{field:'sign', title: '签名', width: '30%', minWidth: 100} //minWidth：局部定义当前单元格的最小宽度，layui 2.2.1 新增
+                        ,{field:'experience', title: '积分', sort: true}
+                        ,{field:'score', title: '评分', sort: true}
+                        ,{field:'classify', title: '职业'}
+                        ,{field:'wealth', width:137, title: '财富', sort: true}
+                    ]
+                ]
+            });
+        });
 
 
     })
